# katzen-wl

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  meson.build
examples/: outputs.c  server.c
includes/kwl/backend/: backend.h
includes/kwl/backend/xcb/: backend.h
includes/kwl/interfaces/: kwl_buffer.h  kwl_output.h
includes/kwl/logger/: log.h
includes/kwl/renderer/: renderer.h  software.h
includes/kwl_private/allocator/: allocator.h  shm.h
includes/kwl_private/backend/: backend.h
includes/kwl_private/interfaces/: kwl_buffer.h
src/allocator/: allocator.c
src/allocator/shm/: shm.c
src/backends/: backend.c
src/backends/xcb/: xcb.c
src/logger/: log.c
src/renderer/: renderer.c
src/renderer/software/: software.c
